@@ -2,6 +2,7 @@
 package edu.colorado.phet.sugarandsaltsolutions.water.model;
 
 import java.awt.Color;
+import java.util.Random;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 import edu.colorado.phet.sugarandsaltsolutions.micro.model.Compound;
@@ -19,6 +20,8 @@ import static java.awt.Color.white;
  */
 public class WaterMolecule extends Compound<SphericalParticle> {
 
+    static final Random random = new Random();
+
     //Auxiliary constructor that creates a water molecule with the oxygen at the origin and an angle of 0 radians
     public WaterMolecule() {
         this( ZERO, 0 );
@@ -34,9 +37,28 @@ public class WaterMolecule extends Compound<SphericalParticle> {
 //        final double spacing = Units.picometersToMeters( 95.84 ) * MicroModel.sizeScale;
 
         final double waterAngleRadians = Math.toRadians( 104.45 );
-        addConstituent( new Constituent<SphericalParticle>( new Hydrogen(), parseAngleAndMagnitude( spacing, waterAngleRadians / 2 ) ) );
-        addConstituent( new Constituent<SphericalParticle>( new Oxygen(), ZERO ) );
-        addConstituent( new Constituent<SphericalParticle>( new Hydrogen(), parseAngleAndMagnitude( spacing, -waterAngleRadians / 2 ) ) );
+
+        final Constituent<SphericalParticle> h1 = new Constituent<SphericalParticle>( new Hydrogen(), parseAngleAndMagnitude( spacing, waterAngleRadians / 2 ) );
+        final Constituent<SphericalParticle> o = new Constituent<SphericalParticle>( new Oxygen(), ZERO );
+        final Constituent<SphericalParticle> h2 = new Constituent<SphericalParticle>( new Hydrogen(), parseAngleAndMagnitude( spacing, -waterAngleRadians / 2 ) );
+
+        //Use different z-orderings to give make the water look as if it is at different 3d orientations
+        int style = random.nextInt( 3 );
+        if ( style == 0 ) {
+            add( h1, o, h2 );
+        }
+        else if ( style == 1 ) {
+            add( h1, h2, o );
+        }
+        else if ( style == 2 ) {
+            add( h2, o, h1 );
+        }
+    }
+
+    private void add( Constituent<SphericalParticle> a, Constituent<SphericalParticle> b, Constituent<SphericalParticle> c ) {
+        addConstituent( a );
+        addConstituent( b );
+        addConstituent( c );
     }
 
     public static class Hydrogen extends SphericalParticle {
